--- a/boneside/boneside.sty
+++ b/boneside/boneside.sty
@@ -7,7 +7,24 @@
 \NeedsTeXFormat{LaTeX2e}% LaTeX 2.09 can't be used (nor non-LaTeX). This was copied from amsmath.
 [1994/12/01]% LaTeX date must be December 1994 or later
 \ProvidesPackage{boneside}
-\RequirePackage{bcommon}
+
+\newif\if@sans
+\newif\if@roman
+
+\DeclareOption{sans}{%
+\@sanstrue}
+
+\DeclareOption{roman}{%
+\@romantrue}
+
+%\ExecuteOptions{roman}
+\ProcessOptions*
+\if@sans
+\RequirePackage[sans]{bcommon}
+\fi
+\if@roman
+\RequirePackage[roman]{bcommon}
+\fi
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % paragraphs have .75 in margins
@@ -16,3 +33,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \RequirePackage[letterpaper, inner=.5in, outer=.75in, top=.75in, bottom=.75in]{geometry}
 \leftskip=.25in
+
+\endinput
