--- a/btwosides/btwosides.sty
+++ b/btwosides/btwosides.sty
@@ -8,7 +8,24 @@
 \NeedsTeXFormat{LaTeX2e}% LaTeX 2.09 can't be used (nor non-LaTeX). This was copied from amsmath.
 [1994/12/01]% LaTeX date must be December 1994 or later
 \ProvidesPackage{btwosides}
-\RequirePackage{bcommon}
+
+\newif\if@sans
+\newif\if@roman
+
+\DeclareOption{sans}{%
+\@sanstrue}
+
+\DeclareOption{roman}{%
+\@romantrue}
+
+%\ExecuteOptions{roman}
+\ProcessOptions*
+\if@sans
+\RequirePackage[sans]{bcommon}
+\fi
+\if@roman
+\RequirePackage[roman]{bcommon}
+\fi
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Margins. Extra 0.5in inner for hole punch.
@@ -21,3 +38,5 @@
 \RequirePackage[letterpaper, inner=1in, outer=.5in, top=.75in, bottom=.75in]{geometry}
 %\leftskip=.25in
 %\rightskip=.25in
+
+\endinput
