fixed example documents

--- a/example_bexam.tex
+++ b/example_bexam.tex
@@ -1,7 +1,7 @@
 %Finished importing into TB_1 5/2018
 
 \documentclass[11pt, letterpaper]{exam}
-\usepackage{bexam}
+\usepackage[roman]{bexam}
 
 \begin{document}
 \newcommand{\btitle}{Midterm 1}
