--- a/example_bexam.tex
+++ b/example_bexam.tex
@@ -12,6 +12,27 @@
 
 \begin{questions}
 
+\begin{q}{15} %Sect 1.7 - From sp2017 M1 1.1-1.9
+	State whether each set of vectors is linearly dependent
+	or independent. Justify your answers.
+	\begin{twocolparts}{1in}
+		\bpart{
+		$\left\{ \begin{bmatrix} 1 \\ 2 \\ 3 \end{bmatrix},
+		\begin{bmatrix} 4\\5\\6 \end{bmatrix},
+		\begin{bmatrix} 0\\0\\0 \end{bmatrix} \right\}$}
+		\bpart{
+		$\{\mathbf{v}_1,\mathbf{v}_2,\mathbf{v}_3, \mathbf{v}_4\}$,
+		a set of 4 vectors in $\mathbb{R}^3$.}
+		\bpart{
+		The set of column vectors from the $3 \times 3$ identity matrix,
+		$\begin{bmatrix}
+			1 & 0 & 0 \\
+			0 & 1 & 0 \\
+			0 & 0 & 1
+		\end{bmatrix}$.}
+	\end{twocolparts}
+\end{q}
+
 \begin{q}{18}
 	Is each statement True or False? No need to justify answers.
 	\begin{bparts}
@@ -70,27 +91,6 @@
 \end{q}
  \vfill
 \newpage
-
-\begin{q}{15} %Sect 1.7 - From sp2017 M1 1.1-1.9
-	State whether each set of vectors is linearly dependent
-	or independent. Justify your answers.
-	\begin{bparts}
-		\part
-		$\left\{ \begin{bmatrix} 1 \\ 2 \\ 3 \end{bmatrix},
-		\begin{bmatrix} 4\\5\\6 \end{bmatrix},
-		\begin{bmatrix} 0\\0\\0 \end{bmatrix} \right\}$
-		\part
-		$\{\mathbf{v}_1,\mathbf{v}_2,\mathbf{v}_3, \mathbf{v}_4\}$,
-		a set of 4 vectors in $\mathbb{R}^3$.
-		\part
-		The set of column vectors from the $3 \times 3$ identity matrix,
-		$\begin{bmatrix}
-			1 & 0 & 0 \\
-			0 & 1 & 0 \\
-			0 & 0 & 1
-		\end{bmatrix}$.
-	\end{bparts}
-\end{q}
 \vfill
 
 \begin{q}{16}
