--- a/bcommon/bcommon.sty
+++ b/bcommon/bcommon.sty
@@ -10,7 +10,7 @@
 
 \RequirePackage{arydshln} 
 \RequirePackage{graphicx}
-\usepackage{enumitem}
+\usepackage[inline]{enumitem}
 \graphicspath{{c:/Users/bensm/OneDrive/local_tex_stuff/dont_delete_images/}}
 
 
@@ -38,7 +38,7 @@
 %\RequirePackage{unicode-math}
 %\setmainfont{Open Sans}
 %\setmathfont{TeX Gyre DejaVu Math}[Scale=MatchUppercase]
-%\setmonofont{Inconsolata}[Scale=MatchLowercase]
+\RequirePackage{courier}
 \fi
 \if@roman
 \RequirePackage{amsmath}
@@ -60,9 +60,9 @@
 \RequirePackage{titlesec}
 \titleformat*{\section}{\Large\bfseries}
 \titleformat*{\subsection}{\large\bfseries}
-\titleformat*{\subsubsection}{\large\bfseries}
-\titleformat*{\paragraph}{\large\bfseries}
-\titleformat*{\subparagraph}{\large\bfseries}
+\titleformat*{\subsubsection}{\normalsize\bfseries}
+\titleformat*{\paragraph}{\normalsize\bfseries}
+\titleformat*{\subparagraph}{\normalsize\bfseries}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % This creates a two columns out of minipages
@@ -79,27 +79,54 @@
   \begin{minipage}[t]{#2\textwidth} \vspace{0em} #4 \end{minipage}
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Ex counter
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newcommand{\bbthreecol}[6]{%#1 - #3 should be decimals which sum to at most 1. #4 - #6 are content.
+  \begin{minipage}[t]{#1\textwidth} \vspace{0em} #4 \end{minipage}
+  \hfill
+  \begin{minipage}[t]{#2\textwidth} \vspace{0em} #5 \end{minipage}
+  \hfill
+  \begin{minipage}[t]{#3\textwidth} \vspace{0em} #6 \end{minipage}
+}
 
-\newcounter{ex}[section]
-\newenvironment{ex}[1][]{\refstepcounter{ex}\par\medskip\noindent
-   \textbf{Ex~\theex. #1} }{\medskip}
-   
+\newcommand{\bbfourcol}[8]{%#1 - #4 should be decimals which sum to at most 1. #5 - #8 are content.
+  \begin{minipage}[t]{#1\textwidth} \vspace{0em} #5 \end{minipage}
+  \hfill
+  \begin{minipage}[t]{#2\textwidth} \vspace{0em} #6 \end{minipage}
+  \hfill
+  \begin{minipage}[t]{#3\textwidth} \vspace{0em} #7 \end{minipage}
+  \hfill
+  \begin{minipage}[t]{#4\textwidth} \vspace{0em} #8 \end{minipage}
+}
+
+\newlength\oldfboxsep%
+\newlength\myminiwidth%
+
+%\newcommand{\bbbox}[1]{\fbox{#1}}
+
+\newcommand{\bbox}[1]{%
+\setlength\oldfboxsep\fboxsep \setlength{\fboxsep}{.1in}%
+\setlength\myminiwidth\textwidth%
+\addtolength\myminiwidth{-0.2in}%
+\noindent \fbox{\begin{minipage}{\myminiwidth}#1\end{minipage}}\setlength\fboxsep\oldfboxsep}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Math Style
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\R}{\mathbb{R}}
 
-\renewcommand{\vec}[1]{\mathbf{#1}}	
+% Uncomment this for compiling 270 stuff!!
+% Maybe later refactor all 270 stuff to use \vect instead
+% to avoid conflict with built-in \vec...
+%\renewcommand{\vec}[1]{\mathbf{#1}}	
+
+\newcommand{\vect}[1]{\overset{\rightharpoonup}{#1}}
+
+\newcommand{\Lim}[1]{\raisebox{0.5ex}{\scalebox{0.8}{$\displaystyle \lim_{#1}\;$}}}
 
 \DeclareMathOperator{\Col}{Col}
 \DeclareMathOperator{\Row}{Row}
 \DeclareMathOperator{\Nul}{Nul}
 \DeclareMathOperator{\rank}{rank}
 \DeclareMathOperator{\Span}{Span}
-
 
 \newcommand{\bbvec}[2]{
   \begin{bmatrix} #1 \\ #2 \end{bmatrix}
@@ -109,22 +136,25 @@
   \begin{bmatrix} #1 \\ #2 \\ #3 \end{bmatrix}
 }
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Graphs, plots
+% COMMENTED OUT BECAUSE IT SLOWS THINGS DOWN! USE IN
+% INDIVIDUAL DOCUMENTS AS NEEDED
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\RequirePackage{tikz,pgf,pgfplots}
-
-
-\pgfplotsset{compat=1.15}
-\RequirePackage{mathrsfs}
-\usetikzlibrary{arrows}
-\usepgfplotslibrary{fillbetween}
-
-\pgfplotsset{every tick label/.append style={font=\footnotesize}}
-\pgfplotsset{
-	/pgfplots/axis line style={thick,black},
-	/pgfplots/every axis grid/.append style={thin,black!50},
-	/pgfplots/tick style={thick,black}
-}
+%\RequirePackage{tikz,pgf,pgfplots}
+%
+%
+%\pgfplotsset{compat=1.15}
+%\RequirePackage{mathrsfs}
+%\usetikzlibrary{arrows}
+%\usepgfplotslibrary{fillbetween}
+%
+%\pgfplotsset{every tick label/.append style={font=\footnotesize}}
+%\pgfplotsset{
+%	/pgfplots/axis line style={thick,black},
+%	/pgfplots/every axis grid/.append style={thin,black!50},
+%	/pgfplots/tick style={thick,black}
+%}
 
 \endinput
