--- a/bcommon/bcommon.sty
+++ b/bcommon/bcommon.sty
@@ -11,7 +11,7 @@
 \RequirePackage{arydshln} 
 \RequirePackage{graphicx}
 \usepackage[inline]{enumitem}
-\graphicspath{{c:/Users/bensm/OneDrive/local_tex_stuff/dont_delete_images/}}
+\graphicspath{{/home/ben/dont_delete_images/}}
 
 
 \newif\if@sans
@@ -34,19 +34,20 @@
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
 \RequirePackage{arev}
+%\setmonofont{Source Code Pro}[Scale=MatchLowercase]
 %Alt option:
 %\RequirePackage{unicode-math}
 %\setmainfont{Open Sans}
 %\setmathfont{TeX Gyre DejaVu Math}[Scale=MatchUppercase]
-\RequirePackage{courier}
+%\RequirePackage{courier}
 \fi
 \if@roman
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
 \RequirePackage{unicode-math}
-\setmainfont{Cambria}
-\setmathfont{Cambria Math}
-\setmonofont{Inconsolata}[Scale=MatchLowercase]
+\setmainfont{Libertinus Serif}
+\setmathfont{Libertinus Math}
+\setmonofont{Source Code Pro}[Scale=MatchLowercase]
 %other option:
 %\setmainfont{DejaVu Serif}
 %\setmathfont{TeX Gyre DejaVu Math}[Scale=MatchUppercase]
