some tiny change, idk

--- a/bcommon/bcommon.sty
+++ b/bcommon/bcommon.sty
@@ -107,7 +107,9 @@
 \setlength\oldfboxsep\fboxsep \setlength{\fboxsep}{.1in}%
 \setlength\myminiwidth\textwidth%
 \addtolength\myminiwidth{-0.2in}%
-\noindent \fbox{\begin{minipage}{\myminiwidth}#1\end{minipage}}\setlength\fboxsep\oldfboxsep}
+\vspace{0.1in}
+
+\noindent \fbox{\begin{minipage}{\myminiwidth}#1\end{minipage}}\vspace{0.1in}\setlength\fboxsep\oldfboxsep}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Math Style
