--- a/bexam/bexam.sty
+++ b/bexam/bexam.sty
@@ -27,7 +27,7 @@
 \RequirePackage[roman]{bcommon}
 \fi
 
-\RequirePackage[document]{ragged2e} %better ragged right justification
+%\RequirePackage[document]{ragged2e} %better ragged right justification
 \RequirePackage[nomessages]{fp} %does arithmetic for \thequestionplus{arg1}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
