switched to luatex i think?

--- a/bcommon/bcommon.sty
+++ b/bcommon/bcommon.sty
@@ -30,6 +30,7 @@
 
 \ProcessOptions*
 \if@sans
+\RequirePackage{fontspec}
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
 \RequirePackage{arev}
@@ -41,6 +42,7 @@
 %\RequirePackage{courier}
 \fi
 \if@roman
+\RequirePackage{fontspec}
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
 \RequirePackage{unicode-math}
