--- a/bexam/bexam.sty
+++ b/bexam/bexam.sty
@@ -61,7 +61,7 @@
   
   \raggedright{\hfill  
     \small{Score:\enspace\makebox[.5in]
-      {\hrulefill}/\numpoints = \enspace\makebox[.5in]{\hrulefill}\%}}
+      {\hrulefill}/\numpoints}}
   
   \vspace{.2in}
 }
