--- a/bnotes/bnotes.sty
+++ b/bnotes/bnotes.sty
@@ -66,19 +66,20 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \RequirePackage{tabto}
 
-%\def\changemargin#1{\list{}{\leftmargin#1}\item[]}
-%\let\endchangemargin=\endlist 
+\def\changemargin#1{\list{}{\leftmargin#1}\item[]}
+\let\endchangemargin=\endlist 
 
-%\newenvironment{horiparts}[1]{\begin{changemargin}{1.4em}\noindent %
-%    \NumTabs{#1} \begin{enumerate*}[label=(\alph*) \hspace{1ex}, itemjoin={\tab}]}
-%    {\end{enumerate*}\end{changemargin}}
+\newenvironment{horiparts}[1]{\begin{changemargin}{1.4em}\noindent %
+    \NumTabs{#1} \begin{enumerate*}[label=(\alph*) \hspace{1ex}, itemjoin={\tab}]}
+    {\end{enumerate*}\end{changemargin}}
 % above changed to below summer 2024, when changing to landscape multicol.
-
+% Spring 2025: Switched it back after getting rid of both ragged2e and \RaggedRight,
+% as both caused one problem or another. Justifying on both sides is fine.
 
 % justify environment is part of ragged2e. It's needed here because \RaggedRight
 % made horiparts fail for some reason.
-\newenvironment{horiparts}[1]{\noindent %
-    \NumTabs{#1} \begin{justify}\begin{enumerate*}[label=(\alph*) \hspace{1ex}, itemjoin={\tab}]}
-    {\end{enumerate*}\end{justify}}
+% \newenvironment{horiparts}[1]{\noindent %
+%     \NumTabs{#1} \begin{justify}\begin{enumerate*}[label=(\alph*) \hspace{1ex}, itemjoin={\tab}]}
+%     {\end{enumerate*}\end{justify}}
 
 \endinput
